Bug fix for invisible buttons.

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -60,7 +60,6 @@ html:not(.mobile) .btn.ui-dark:hover .icon,html:not(.mobile) .btn.ui-x-dark:hove
 .btn-active { font-weight: bold; }
 .btn-block { width: 100%; display: block; }
 
-.btn-invisible:not([class*="ui-"]):not(:hover) { color: #000; }
 .btn-invisible.ui-dark:not(.ui-text),.btn-invisible.ui-x-dark:not(.ui-text) { color: #000; }
 .btn-invisible.ui-dark:hover,.btn-invisible.ui-x-dark:hover { color: #fff; }
 .btn-invisible:not(:hover) { background-color: rgba(0,0,0,0) !important; }
